// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`utils/keepKeysFromExpected ignoreExtraFields: false, ignoreExtraArrayItems: false 1`] = `
Object {
  "extra": "extra",
  "extraNull": null,
  "extraUndefined": undefined,
  "field": "value",
  "items": Array [
    Object {
      "items": Array [
        Object {
          "extra": "extra1",
          "name": "subitem1",
        },
        Object {
          "extra": "extra2",
          "extraNull": null,
          "extraUndefined": undefined,
          "name": "subitem2",
          "null": null,
          "undefined": undefined,
        },
        null,
        undefined,
      ],
      "name": "item1",
    },
    Object {
      "name": "item2",
    },
    Object {
      "name": "item3",
    },
    Object {
      "name": null,
    },
    Object {
      "name": undefined,
    },
    null,
    undefined,
    Object {
      "name": "item4",
    },
    Object {
      "name": null,
    },
    Object {
      "name": undefined,
    },
  ],
  "null": null,
  "undefined": undefined,
}
`;

exports[`utils/keepKeysFromExpected ignoreExtraFields: false, ignoreExtraArrayItems: true 1`] = `
Object {
  "extra": "extra",
  "extraNull": null,
  "extraUndefined": undefined,
  "field": "value",
  "items": Array [
    Object {
      "items": Array [
        Object {
          "extra": "extra1",
          "name": "subitem1",
        },
      ],
      "name": "item1",
    },
    Object {
      "name": "item2",
    },
    Object {
      "name": "item3",
    },
    Object {
      "name": null,
    },
    Object {
      "name": undefined,
    },
    null,
    undefined,
  ],
  "null": null,
  "undefined": undefined,
}
`;

exports[`utils/keepKeysFromExpected ignoreExtraFields: true, ignoreExtraArrayItems: false 1`] = `
Object {
  "field": "value",
  "items": Array [
    Object {
      "items": Array [
        Object {
          "name": "subitem1",
        },
        Object {
          "extra": "extra2",
          "extraNull": null,
          "extraUndefined": undefined,
          "name": "subitem2",
          "null": null,
          "undefined": undefined,
        },
        null,
        undefined,
      ],
      "name": "item1",
    },
    Object {
      "name": "item2",
    },
    Object {
      "name": "item3",
    },
    Object {
      "name": null,
    },
    Object {
      "name": undefined,
    },
    null,
    undefined,
    Object {
      "name": "item4",
    },
    Object {
      "name": null,
    },
    Object {
      "name": undefined,
    },
  ],
  "null": null,
  "undefined": undefined,
}
`;

exports[`utils/keepKeysFromExpected ignoreExtraFields: true, ignoreExtraArrayItems: true 1`] = `
Object {
  "field": "value",
  "items": Array [
    Object {
      "items": Array [
        Object {
          "name": "subitem1",
        },
      ],
      "name": "item1",
    },
    Object {
      "name": "item2",
    },
    Object {
      "name": "item3",
    },
    Object {
      "name": null,
    },
    Object {
      "name": undefined,
    },
    null,
    undefined,
  ],
  "null": null,
  "undefined": undefined,
}
`;
